<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="activity_app_name">CommuteWatcher</string>
    <string name="app_name">Commute\nWatcher</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point </string>
    <string name="start_time">Start Time: </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_work_address">Enter your destination address</string>
    <string name="enter_home_address">Enter your starting address</string>
    <string name="address_example">Ex. 1700 Walnut Street, Philadelphia PA 19104</string>
    <string name="alt_address_example"> Ex. 500 Main Street, Anytown PA 19123</string>
    <string name="set_to_work_time">Set time to check your commute</string>
    <string name="set_hours_to_home">Set time to check your home commute</string>
    <string name="save_commute_info">Save commute info</string>
    <string name="date_time_work_commute">Select time of commute</string>
    <string name="date_time_home_commute">Time of home commute</string>
    <string name="save">Save Day</string>
    <string name="save_all">Save</string>
    <string name="done">Done</string>
    <string name="active">Active</string>
    <string name="cancel">Cancel</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="fetching_commute"></string>
    <string name="preferences">Preferences</string>
    <string name="set_preferences">Set Preferences</string>
    <string name="add_commute_short">Add Commute</string>
    <string name="action_alarms_toggle">Alarms On/Off</string>
	<string name="action_turn_checker_on">Turn Alarm On</string>
	<string name="action_turn_checker_off">Turn Alarm Off</string>
	<string name="delete_all">Delete All Commutes</string>
	<string name="delete_this_commute">Delete this commute</string>
    <string name="clear_day">Clear Day</string>
    <string name="content_authority">com.sammoin.commutewatcher.userscheduleprovider</string>
	<string name="add_new_workday_button_text">Add New Commute and Time</string>
    <string name="add_new_dayitem_button_text">Add New Commute and Time</string>
    <string name="time_to_check_commute">Next shortest commute distance and time: </string>
    <string name="and">and</string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyDqh6bZAibYs9YYScAM4-lHP_mjEcfjneE"</string>
    <string name="google_maps_browser_key" translatable="false" templateMergeStrategy="preserve">AIzaSyDTtlibd098MTVHMia7E9lKcdKogBnGRK4</string>
    <string name="upcoming_info_avail">Next shortest commute info available</string>
    <string name="tap_to_start">Next shortest commute info available. Tap to send commute info to a map app.</string>
    <string name="google_app_id">160627016003</string>
    <string name="trips">Trips :</string>
    <string name="trips_active"> active</string>
    <string name="next_commute_label">Next commute today:</string>
    <string name="no_remaining_commutes_today">No more commutes are remaining. Time to relax!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_active">Active</string>
    <string name="app_inactive">Inactive</string>
    <string name="distance">Distance: </string>
    <string name="duration">Duration: </string>
    <string name="tracker_id" translatable="false" templateMergeStrategy="preserve" >UA-78099069-1</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>


    <string name="pref_default_start_point">Default Starting Address</string>
    <string name="pref_default_display_start"></string>
    <string name="pref_default_start_descrip">Enter an address here to use as a default start point.</string>
    <string name="pref_default_start_key">default_start_address</string>
    <string name="pref_enable_disable_app">Enable/Disable App</string>
    <string name="pref_enable_disable_key">enable_disable</string>
    <string name="pref_enable_disable_descrip">Uncheck this if you don\'t need to hear from this app.</string>



    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
