<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/pref_enable_disable_key"
        android:title="@string/pref_enable_disable_app"
        android:summary="@string/pref_enable_disable_descrip"
        android:defaultValue="true" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_default_start_key"
        android:title="@string/pref_default_start_point"
        android:defaultValue=""
        android:selectAllOnFocus="true"
        android:summary="@string/pref_default_start_descrip"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->


</PreferenceScreen>
